--- a/style.css
+++ b/style.css
@@ -8,8 +8,7 @@ body {
 header {
     background: blue;
     padding: 30px 0;
-    text-align: center;
-    color: white;
+    text-align: center;color: white;
 }
 
 div {
@@ -76,8 +75,9 @@ nav ul li:hover {
 .row {}
 
 .col1 {
+    background:#333
     float: left;
-    margin: 5px 15px 10px 0px;
+    margin: 1%;
     width: 31%;
   }
 footer {
