--- a/style.css
+++ b/style.css
@@ -72,15 +72,16 @@ nav ul li:hover {
     padding: 5px;
 }
 
-.row {}
+#imagelist {
+    font-size: 0;
+    width: 225px;
+    margin: 0 auto;
+}
 
-.col1 {
-    background:#333
-    float: left;
-    margin: 1%;
-    width: 31%;
-  }
+#imagelist a {
+  margin: 2px;
+}
+
 footer {
   clear: both;
-
 }
